# Botenix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
docker/: .env.local  docker-compose.dev.yml
docker/mattermost/: .gitignore
docker/mattermost/config/: config.json
src/botenix/: __init__.py  exceptions.py  logger.py
src/botenix/integration/: annotations.py
src/botenix/integration/clients/: base.py  posts.py
src/botenix/integration/clients/models/: attachment.py  common.py  embed.py  emoji.py  file_info.py  posts.py  reaction.py
src/botenix/integration/utils/: authentication.py  http_client.py
tests/: test_botenix.py
tests/integration/: test_http_client.py
